crates/stylex-shared/tests/transform_stylex_define_consts_test/snapshots/fold__transform_stylex_define_consts_test__define_consts_in_stylex_create__adds_multiple_media_query_placeholders_from_constants_stylex.snap
---
source: crates/stylex-shared/tests/transform_stylex_define_consts_test/define_consts_in_stylex_create.rs
assertion_line: 156
expression: output
---
import * as stylex from '@stylexjs/stylex';
import { breakpoints } from './constants.stylex';
export const styles = {
    root: {
        kMwMTN: "x1e2nbdu x1pitq50 x14racuk",
        $$css: true
    }
};
